--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="icon" type="img/ico" href="favicon.ico">
 <style>
 body {background-color: powderblue;
 }
@@ -10,9 +11,10 @@ h1   {
 	color: blue; 
 	font-family: Comic Sans MS;
 	border: 3px solid yellow;
+	background: yellow;
 	text-align: center;
 	font-size: 4em;
-	animation-duration: 1s;
+	animation-duration: 1.5s;
     animation-name: fadeAndScale;
     animation-timing-function: cubic-bezier(.71,.55,.62,1.57);
     animation-iteration-count:infinite;
